# SI

./: .appveyor.yml  .clang-tidy  .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README_8md.html  SI-logo.xcf  absorbed__dose_8h__incl.map  acceleration_8h.html  angle_8h__dep__incl.md5  angular__frequency_8h__incl.map  annotated.html  area_8h__dep__incl.md5  astronomic_8h__incl.map  catalytic__activity_8h__incl.md5  classes.html  conanfile.py  conanfile.txt  detail_8h__incl.map  dir_f2fff1636d7619bfa6219b8d3770670b.html  electric__capacity_8h__incl.map  electric__charge_8h.html  electric__current_8h__incl.md5  electric__current_8h_source.html  electric__potential_8h_source.html  energy_8h__dep__incl.md5  energy_8h_source.html  eps__equal_8h_source.html  flow_8h.html  force_8h__incl.md5  force_8h_source.html  frequency_8h__dep__incl.map  (+184 more)
doc/: CMakeLists.txt  README_8md.html  absorbed__dose_8h.html  absorbed__dose_8h__incl.map  absorbed__dose_8h__incl.md5  absorbed__dose_8h_source.html  acceleration_8h.html  acceleration_8h__dep__incl.map  acceleration_8h__dep__incl.md5  acceleration_8h__incl.map  acceleration_8h__incl.md5  acceleration_8h_source.html  angle_8h.html  angle_8h__dep__incl.map  angle_8h__dep__incl.md5  angle_8h__incl.map  angle_8h__incl.md5  angle_8h_source.html  angular__frequency_8h.html  angular__frequency_8h__incl.map  angular__frequency_8h__incl.md5  angular__frequency_8h_source.html  annotated.html  area_8h.html  area_8h__dep__incl.map  area_8h__dep__incl.md5  area_8h__incl.map  area_8h__incl.md5  area_8h_source.html  astronomic_8h.html  astronomic_8h__incl.map  astronomic_8h__incl.md5  astronomic_8h_source.html  catalytic__activity_8h.html  catalytic__activity_8h__incl.map  catalytic__activity_8h__incl.md5  catalytic__activity_8h_source.html  classes.html  code-quality-tools.md  cross__unit__operations_8h.html  (+1600 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  (+55 more)
example/: CMakeLists.txt  README.md
example/src/: main.cc
include/: area.h  length.h  value_holder.h
search/: all_13.js  all_14.js  all_17.js  all_5.js  all_6.js  classes_0.js  defines_1.js  files_1.js  files_4.js  files_5.js  files_6.js  files_c.js  files_f.js  functions_4.js  functions_7.js  namespaces_0.js  pages_0.js  typedefs_10.js  typedefs_15.js  typedefs_5.js  typedefs_a.js
test/: CMakeLists.txt  Catch2Main.cc  compilation-tests.sh  conanfile.txt  installation-tests.sh  version-consistency.sh
test/conan-cmake-installation-test/: CMakeLists.txt  conanfile.txt
test/conan-cmake-installation-test/src/: main.cc
test/conan-installation-test/: CMakeLists.txt  conanfile.txt
test/include/catch2/: catch.hpp
test/installation-test-subdirectory/: CMakeLists.txt  README.md
test/installation-test-subdirectory/src/: main.cc
test/installation-tests/: CMakeLists.txt  README.md
test/src/: Catch2Main.cc  acceleration_tests.cc  area_tests.cc  detail_tests.cc  electric_charge_tests.cc  electric_current_tests.cc  force_tests.cc  length_tests.cc  length_tests_floating_point.cc  length_tests_integral_type.cc  luminosity_tests.cc  mass_tests.cc  number_parser_tests.cc  substance_tests.cc  temperature_tests.cc  time_tests.cc  unit_conversion_tests.cc  unit_t_operator_tests.cc  unit_t_tests.cc  unit_t_type_tests.cc  value_holder_tests.cc  velocity_tests.cc
test/src/base_unit_tests/: astronomic_tests.cc  electric_current_tests.cc  length_tests.cc  length_tests_floating_point.cc  luminosity_tests.cc  mass_tests.cc  substance_tests.cc  temperature_tests.cc  time_tests.cc
test/src/benchmarks/: detail_benchmarks.cc  string_operations_benchmarks.cc  unit_assignment_benchmarks.cc  unit_benchmarks.cc
test/src/compilation_tests/: CMakeLists.txt  copy_ctor_test.cc  copy_ctor_with_same_ratio_test.cc  main.cc  move_ctor_test.cc  move_ctor_with_same_ratio_test.cc  operator_add_assignment_same_ratio_test.cc  operator_add_assignment_test.cc  operator_add_test.cc  operator_copy_assignment_same_ratio_test.cc  operator_copy_assignment_test.cc  operator_divide_from_floating_point_test.cc  operator_divide_from_integral_test.cc  operator_divide_test.cc  operator_equals.cc  operator_equals_test.cc  operator_greater_than_test.cc  operator_greaterthan_test.cc  operator_less_than_test.cc  operator_lessthan_test.cc  operator_move_assignment_same_ratio_test.cc  operator_move_assignment_test.cc  operator_multiply_test.cc  operator_subtract_assignment_same_ratio_test.cc  operator_subtract_assignment_test.cc  operator_subtract_test.cc  parsing_overflow_test.cc  parsing_overflow_test_pass_compilation.cc
test/src/derived_unit_tests/: absorbed_dose_tests.cc  acceleration_tests.cc  angle_tests.cc  angular_frequency_tests.cc  angular_velocity_tests.cc  area_tests.cc  astronomic_tests.cc  catalytic_activity_tests.cc  derived_temperature_tests.cc  electric_capacity_tests.cc  electric_charge_tests.cc  electric_conductance_tests.cc  electric_potential_tests.cc  electric_resistance_tests.cc  energy_tests.cc  equivalent_dose_tests.cc  flow_tests.cc  force_tests.cc  frequency_tests.cc  illuminance_tests.cc  inductance_tests.cc  luminous_flux_tests.cc  magnetic_field_tests.cc  magnetic_flux_tests.cc  momentum_tests.cc  multi_units_tests.cc  power_tests.cc  pressure_tests.cc  radioactivity_tests.cc  solid_angle_tests.cc  surface_flow_tests.cc  velocity_tests.cc
test/src/detail_tests/: detail_tests.cc  number_parser_tests.cc  streaming_operator_tests.cc  unit_helper_functions_tests.cc  unit_t_conversions_tests.cc  unit_t_operator_tests.cc  unit_t_type_tests.cc
test/src/installation-tests/: main.cc
test_package/: conanfile.py  (+1 more)
(+63 files in other folders)
